gsx-practica2/kubernetes/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backend
spec:
  serviceName: "backend"
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        # USUARIO DE DOCKER HUB
        image: blladria/simple-app-gsx:v1
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: backend-data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: backend-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
